--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,14 +9,15 @@ version = "0.1.0"
 cortex-m = "0.6.4"
 cortex-m-rt = "0.6"
 cortex-m-semihosting = "0.3"
-panic-halt = "0.2"
+#panic-halt = "0.2"
+panic-rtt-target = { version = "0.1", features = ["cortex-m"] }
 
 # Uncomment for the panic example.
 # panic-itm = "0.4.1"
 
 # Uncomment for the allocator example.
 alloc-cortex-m = "0.4"
-
+rtt-target = { version = "0.3", features = ["cortex-m"] }
 usb-device = "0.2"
 usbd-serial = "0.1"
 
