--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,8 @@ panic-rtt-target = { version = "0.1", features = ["cortex-m"] }
 # Uncomment for the panic example.
 # panic-itm = "0.4.1"
 
+num-traits = { version = "0", default-features = false }
+
 # Uncomment for the allocator example.
 alloc-cortex-m = "0.4"
 rtt-target = { version = "0.3", features = ["cortex-m"] }
@@ -22,7 +24,7 @@ usb-device = "0.2"
 usbd-serial = "0.1"
 
 [dependencies.atsamd-hal]
-features = ["same51j"]
+features = ["same51j", "unproven"]
 git = "https://github.com/atsamd-rs/atsamd"
 revision = "master"
 #path = "../atsamd/hal"
