--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ cortex-m-rt = "0.6"
 panic-rtt-target = { version = "0.1", features = ["cortex-m"] }
 rtt-target = { version = "0.3", features = ["cortex-m"] }
 
-num-traits = { version = "0", default-features = false }
+num-traits = { version = "0", default-features = false, features = ["libm"] }
 
 alloc-cortex-m = "0.4"
 usb-device = "0.2"
