--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,56 +1,5 @@
-[package]
-authors = ["Yann Ramin <github@theatr.us>"]
-edition = "2018"
-readme = "README.md"
-name = "ba-firmware-driver-hv"
-version = "0.1.0"
-
-[dependencies]
-cortex-m = "0.6.4"
-cortex-m-rt = "0.6"
-panic-rtt-target = { version = "0.1", features = ["cortex-m"] }
-rtt-target = { version = "0.3", features = ["cortex-m"] }
-
-num-traits = { version = "0", default-features = false, features = ["libm"] }
-
-alloc-cortex-m = "0.4"
-usb-device = "0.2"
-usbd-serial = "0.1"
-
-[dependencies.ba-postcard-proto]
-path = "../ba-postcard-proto"
-
-[dependencies.postcard]
-version = "0.7"
-features = ["alloc"]
-
-[dependencies.serde]
-version = "1"
-features = ["derive"]
-default-features = false
-
-[dependencies.atsamd-hal]
-features = ["same51j", "unproven"]
-#git = "https://github.com/atsamd-rs/atsamd"
-#revision = "master"
-path = "../atsamd/hal"
-
-[dependencies.atsame51j]
-#path = "../atsamd/pac/atsame51j"
-git = "https://github.com/atsamd-rs/atsamd"
-revision = "master"
-
-
-[dependencies.ba_driver_hv_bsp]
-path = "../blueacro-bsp/ba_driver_hv_bsp"
-features = ["default", "rt", "usb"]
-
-[[bin]]
-name = "ba-firmware-driver-hv"
-test = false
-bench = false
-
-[profile.release]
-codegen-units = 1
-debug = true
-lto = true
+[workspace]
+members = [
+  "algo",
+]
+ exclude = ["cross"]
